--- a/server/package.json
+++ b/server/package.json
@@ -7,19 +7,25 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["auth", "jwt", "otp", "sqlite"],
+  "keywords": [
+    "auth",
+    "jwt",
+    "otp",
+    "sqlite"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "better-sqlite3": "^9.2.2",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
-    "express-rate-limit": "^7.1.5",
-    "validator": "^13.11.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "pg": "^8.16.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
